--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "recepies-angular-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wafel34/fs-angular-app.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "watch:client": "ng serve --proxy-config proxy.conf.json",
+    "watch:server": "nodemon src/server/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +28,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "mongodb": "^2.2.33",
+    "nodemon": "^1.12.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -41,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
