--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^2.2.33",
     "nodemon": "^1.12.1",
     "rxjs": "^5.5.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
