--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bcrypt": "^1.0.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.1.0",
+    "jwt-express": "^1.1.0",
     "mongodb": "^2.2.33",
     "nodemon": "^1.12.1",
     "rxjs": "^5.5.2",
