--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^5.0.0",
     "bcrypt": "^1.0.3",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.1.0",
