--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.1.0",
     "jwt-express": "^1.1.0",
