--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recepies-angular-app",
+  "name": "recipes-angular-app",
   "version": "1.0.0",
   "license": "MIT",
   "repository": {
