--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "bcrypt": "^1.0.3",
+    "compression": "^1.7.1",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
